Fix problem with small images being scaled up
After this change all images scale down to fit the page if they otherwise didn't fit and if they do fit in original size they are shown in the original size and not scaled up as it used to be.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -75,6 +75,6 @@ body {
         linear-gradient( 85deg, rgba(0,0,0,0) 80%, #74a6ae 80%);
 }
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
